K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: myingress
spec:
  rules:
  - host: php-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fr-service
            port: 
              number: 80
